@@ -419,6 +419,11 @@ $playerPayAmount = 70;
 $wifePayAmount = 140;
 
 
+// how many times vault can be reached before player stops earning vault
+// salary
+$vaultReachLimit = 4;
+
+
 // how long the chill on a house lasts after you die there
 // experimenting with 1 hour
 $chillTimeout = "0 1:00:0.000";
